--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,25 +1,28 @@
-[tool.poetry]
-name = "pythonproject"
+[project]
+name = "deutscher-blog-webcrawler"
 version = "0.1.0"
 description = ""
-authors = ["Your Name <you@example.com>"]
+authors = [
+    {name = "LaurensWink",email = "laurensherzebrock@googlemail.com"}
+]
 readme = "README.md"
-
-[tool.poetry.dependencies]
-python = "^3.11"
-requests = "^2.32.3"
-beautifulsoup4 = "^4.13.3"
-loguru = "^0.7.3"
-selenium = "^4.29.0"
-pandas = "^2.2.3"
-langdetect = "^1.0.9"
-httpx = "^0.28.1"
-webdriver-manager = "^4.0.2"
-pathvalidate = "^3.2.3"
-pydantic = "^2.10.6"
-mysql-connector-python = "^9.2.0"
+requires-python = ">=3.10,<4"
+dependencies = [
+    "loguru (>=0.7.3,<0.8.0)",
+    "alive-progress (>=3.2.0,<4.0.0)",
+    "sqlmodel (>=0.0.24,<0.0.25)",
+    "sqlalchemy (>=2.0.40,<3.0.0)",
+    "pathlib (>=1.0.1,<2.0.0)",
+    "beautifulsoup4 (>=4.13.3,<5.0.0)",
+    "langdetect (>=1.0.9,<2.0.0)",
+    "httpx (>=0.28.1,<0.29.0)",
+    "httpcore (>=1.0.7,<2.0.0)",
+    "selenium (>=4.30.0,<5.0.0)",
+    "pandas (>=2.2.3,<3.0.0)"
+]
 
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
