--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,10 @@ dependencies = [
     "beautifulsoup4 (>=4.13.3,<5.0.0)",
     "langdetect (>=1.0.9,<2.0.0)",
     "httpx (>=0.28.1,<0.29.0)",
-    "httpcore (>=1.0.7,<2.0.0)"
+    "httpcore (>=1.0.7,<2.0.0)",
+    "notebook (>=7.3.3,<8.0.0)",
+    "numpy (>=2.2.4,<3.0.0)",
+    "matplotlib (>=3.10.1,<4.0.0)"
 ]
 
 
